--- a/css/custom.css
+++ b/css/custom.css
@@ -55,6 +55,7 @@
 .navbar-link.active {
   color: #33C3F0;
 }
+
 .has-docked-nav .navbar {
   position: fixed;
   top: 0;
@@ -63,4 +64,32 @@
 
 .has-docked-nav .navbar-spacer {
   display: block;
+}
+
+.navbar-chosen {
+  border-bottom: 2px solid rgba(23, 169, 251, 0.8);
+}
+
+/* Photofeed */
+#photofeed {
+  display: none;
+  position: fixed;
+  top: 67px;
+  right: 0;
+  background-color: rgba(15, 15, 15, 0.8);
+  height: 600px;
+  width: 40%;
+  z-index: 100;
+}
+
+#photofeed a {
+  text-decoration: none;
+}
+
+#closefeed {
+  position: relative;
+  float: right;
+  top: 10px;
+  right: 10px;
+  color: white;
 }
