--- a/css/custom.css
+++ b/css/custom.css
@@ -93,3 +93,48 @@
   right: 10px;
   color: white;
 }
+
+.tabs-menu {
+    clear: both;
+    margin: 0;
+    position: fixed;
+    left: 60px;
+    list-style-type: none;
+}
+
+.tabs-menu li {
+    line-height: 30px;
+    float: left;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 0;
+    background-color: #ccc;
+    border-top: 1px solid #d4d4d1;
+    border-right: 1px solid #d4d4d1;
+    border-left: 1px solid #d4d4d1;
+}
+
+.tabs-menu li.current {
+    position: relative;
+    background-color: #fff;
+    border-bottom: 1px solid #fff;
+    z-index: 5;
+}
+
+.tabs-menu li a {
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+
+.tabs-menu .current a {
+    color: #2e7da3;
+}
+
+.tab-content {
+    display: none;
+}
+
+#tab-1 {
+ display: block;
+}
