--- a/css/custom.css
+++ b/css/custom.css
@@ -87,10 +87,9 @@
 }
 
 #closefeed {
-  position: relative;
-  float: right;
-  top: 10px;
-  right: 10px;
+  position: fixed;
+  top: 75px;
+  right: 55px;
   color: white;
 }
 
